# feff-rs

./: .clippy.toml  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  FEFF10_LICENSE  LICENSE  README.md  codecov.yml  rustfmt.toml  test_cards.txt  test_ellipticity_write.inp
.claude/: settings.local.json
.config/pre-commit/: config.yaml
.github/workflows/: bench.yml  ci.yml  release.yml
.states/: state.json
benches/: benchmarks.rs
docs/: library_architecture.md  thermal_api_reference.md  thermal_effects.md  thermal_effects_example.md  thermal_models_README.md  visualizing_thermal_effects.md
examples/: thermal_effects_example.rs  xanes_calculation.rs
plans/: architecture.md  implementation_plan.md  temperature_dependent_potentials.md
src/: lib.rs  main.rs
tests/: advanced_card_tests.rs  atom_solver_tests.rs  atoms_tests.rs  ellipticity_tests.rs  elnes_tests.rs  exafs_fitting_tests.rs  exafs_tests.rs  fms_solver_tests.rs  fms_tests.rs  input_tests.rs  more_card_types_tests.rs  muffin_tin_tests.rs  new_card_tests.rs  new_card_types_tests.rs  nrixs_tests.rs  opcons_tests.rs  pair_thermal_parameters_tests.rs  path_finding_tests.rs  path_visualization_tests.rs  phase_shifts_from_wavefunctions_tests.rs  physics_phase_shifts_tests.rs  potential_tests.rs  scattering_matrix_tests.rs  scattering_tests.rs  simplified_fms_solver_tests.rs  tdlda_multipole_tests.rs  thermal_effects_tests.rs  thermal_models_tests.rs  thermal_phase_shifts_tests.rs  utils_tests.rs  validation_tests.rs  xanes_calculator_tests.rs  xanes_tests.rs  xanes_thermal_tests.rs
(+65 files in other folders)
